--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
   <nav id="mainNav" class="navbar navbar-dark navbar-expand-sm fixed-top py-0" aria-label="Toggle navigation">
     <a href="#welcome-msg" class="sender navbar-brand">
       <!-- <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> -->
-      CJM
+      <%- include('partials/logo-small') %>
     </a>
     <button class="navbar-toggler" data-toggle="collapse" data-target ="#navLinks">
       <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,8 @@
 
   <div id="welcome-msg" class="default-image">
     <div class="row welcome-banner">
-      <div class="col-12">
+      <%- include('partials/logo-large') %>
+      <div id="appear-anim" class="col-12">
         Howdy, I'm <span class="name-emphasis"><strong>Christopher McGregor</strong></span>
         <a href="#about-me" class="sender">
           <div class="box-1">
