--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,8 +58,11 @@
     </div>
     <div class="underline"></div>
     <div class="row justify-content-center mt-5">
+      <img src="imgs/penguin.jpg" class="col-2 profile-pic">
       <div class="col-10 text-center mb-5">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h4>I'm <span class="name-emphasis">Christopher</span>, a Junior Computer Science major, Cyber Security minor at Texas A&M University College Station.
+        The dog loving, piano playing, tech fanatic from Corpus Christi, Texas. I enjoy tinkering with shiny new technologies and have recently found myself falling down the web-development rabbit hole.
+        You can often find me in my room either clacking at a keyboard or relaxing with some video games.</h4>
       </div>
     </div>
     <div class="row">
@@ -112,20 +115,20 @@
     <div class="underline"></div>
     <div class="row justify-content-center">
             <div class="card col-md-6 col-lg-4 p-4">
-                <div class="face face1">
+                <div class="face face1 PWcover">
                     <div class="content">
-                        <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
-                        <h3>Cool</h3>
+                        <img src="imgs/website.png">
+                        <h3>mcgregorc.com</h3>
                     </div>
                 </div>
                 <div class="face face2">
                     <div class="content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                            <a href="#">Read More</a>
+                        <p>This site. <br>Mongo, Express, Node with Bootstrap styling</p>
+                            <a target="_blank" href="https://github.com/f4alt/Personal-Website">Github Repo</a>
                     </div>
                 </div>
             </div>
-            <div class="card col-md-6 col-lg-4 p-4">
+            <!-- <div class="card col-md-6 col-lg-4 p-4">
                 <div class="face face1">
                     <div class="content">
                         <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
@@ -152,7 +155,7 @@
                             <a href="#">Read More</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
   </div>
 
