profile pic scalability

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,11 +58,11 @@
     </div>
     <div class="underline"></div>
     <div class="row justify-content-center mt-5">
-      <img src="imgs/penguin.jpg" class="col-2 profile-pic">
-      <div class="col-10 text-center mb-5">
-        <h4>I'm <span class="name-emphasis">Christopher</span>, a Junior Computer Science major, Cyber Security minor at Texas A&M University College Station.
+      <img src="imgs/penguin.jpg" class="d-none d-md-block col-3 profile-pic">
+      <div class="col-9 text-center mb-5">
+        <h5>I'm <span class="name-emphasis">Christopher</span>, a Junior Computer Science major, Cyber Security minor at Texas A&M University College Station.
         The dog loving, piano playing, tech fanatic from Corpus Christi, Texas. I enjoy tinkering with shiny new technologies and have recently found myself falling down the web-development rabbit hole.
-        You can often find me in my room either clacking at a keyboard or relaxing with some video games.</h4>
+        You can often find me in my room either clacking at a keyboard or relaxing with some video games.</h5>
       </div>
     </div>
     <div class="row">
