--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -163,8 +163,15 @@ html, body {
 
 /* ABOUT */
 .profile-pic {
-  transform: translate(-0, -25%);
+  transform: translate(-0, -15%);
   border-radius: 100px;
+}
+
+@media (max-width:375px) {
+  #about-me h5 {
+    font-size: 1rem;
+    margin: 0px;
+  }
 }
 
 .underline {
