--- a/views/daily.ejs
+++ b/views/daily.ejs
@@ -2,13 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Daily Page</title>
+    <title>APIs</title>
+    <!-- Bootstrap then main stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/daily.css">
   </head>
   <body>
-    <%- include('partials/logo-large') %>
-    <h1>COVERED TEXT</h1>
+    <div class="nasaImg row justify-content-center">
+      <div class="col-4">
+        <p>Drink some <span><%= beerName %></span></p>
+        <img src=<%= beerImg %>>
+      </div>
+    </div>
 
-
+    <!-- JQuery then background setting script -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script>
+      $('.nasaImg').css('background-image', "url(<%= nasaImg %>)");
+    </script>
   </body>
 </html>
