--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,6 +3,7 @@ html, body {
   background: var(--background);
   font-family: 'Libre Baskerville', serif;
   height: 100%;
+  color: var(--contrast);
 }
 
 /* NAVBAR */
@@ -97,7 +98,8 @@ html, body {
 }
 
 .name-emphasis {
-  color: var(--bright);
+  /* color: var(--bright); */
+  color: white;
 }
 
 @media (max-width: 450px) {
@@ -112,7 +114,8 @@ html, body {
 }
 
 .btn-one {
-    color: var(--contrast);
+    /* color: var(--contrast); */
+    color: white;
     transition: all 0.3s;
     position: relative;
     font-size: 1.5rem;
@@ -134,8 +137,10 @@ html, body {
     border-bottom-width: 1px;
     border-top-style: solid;
     border-bottom-style: solid;
-    border-top-color: red;
-    border-bottom-color: red;
+    /* border-top-color: red;
+    border-bottom-color: red; */
+    border-top-color: var(--emphasis);
+    border-bottom-color: var(--emphasis);
     transform: scale(0.1, 1);
 }
 .btn-one:hover span {
@@ -215,16 +220,20 @@ html, body {
   color: var(--bright);
 }
 
+.experience {
+  font-size: 1.25rem;
+}
+
 /* PROJECTS */
 .card{
   background: transparent;
   border: none;
   position: relative;
-  cursor: pointer;
+  cursor: default;
 }
 
 .card .face{
-  padding: 15%;
+  padding: 5%;
   transition: 0.5s;
   border-radius: 10px;
 }
@@ -237,6 +246,7 @@ html, body {
     align-items: center;
     z-index: 1;
     transform: translateY(100px);
+    background: var(--background-gradient);
 }
 
 .card:hover .face.face1{
@@ -245,7 +255,7 @@ html, body {
 }
 
 .card .face.face1 .content{
-    opacity: 0.2;
+    /* opacity: 0.2; */
     transition: 0.5s;
 }
 
@@ -254,7 +264,7 @@ html, body {
 }
 
 .card .face.face1 .content img{
-    max-width: 200px;
+    max-width: 300px;
 }
 
 .card .face.face1 .content h3{
@@ -284,6 +294,7 @@ html, body {
 .card .face.face2 .content p{
     margin: 0;
     padding: 0;
+    color: var(--bright);
 }
 
 .card .face.face2 .content a{
@@ -291,9 +302,10 @@ html, body {
     display:  inline-block;
     text-decoration: none;
     font-weight: 900;
-    color: black;
+    color: var(--bright);
     padding: 5px;
-    border: 1px solid #333;
+    border: 1px solid var(--bright);
+    border-radius: 15px;
 }
 
 .card .face.face2 .content a:hover{
@@ -303,10 +315,10 @@ html, body {
 
 .send-top i {
   color: var(--emphasis);
-  font-size: 3.5rem;
+  font-size: 3rem;
   padding: 5px;
   border: 1px solid black;
-  border-radius: 10px;
+  border-radius: 30px;
   background: var(--background-gradient);
 }
 
@@ -448,13 +460,62 @@ html, body {
   }
 }
 
+/* CONTACT FORM */
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: var(--emphasis);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: var(--contrast);
+  color: black;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 10px;
+  background-color: var(--background-gradient);
+  padding: 20px;
+}
+
+.submit_block {
+  display: flex;
+}
+
+.submit_block li {
+  list-style: none;
+}
+
 /* COLOR PALETTE */
 :root {
-  --background: #91C6FF;
-  --background-gradient: #6A7698;
-  --emphasis: #500000;
-  --bright: #6A7698;
-  --contrast: #f0f3f5;
+  /* --background: #91C6FF; */
+  --background: #500000;
+  /* --background-gradient: #6A7698; */
+  --background-gradient: #300000;
+  /* --emphasis: #500000; */
+  --emphasis: #3F8EFC;
+  /* --bright: #6A7698; */
+  --bright: #BD8B9C;
+  /* --contrast: #f0f3f5; */
+  --contrast: #C0F5FA;
   --neutral: #5b5750;
   --copyright: #98c1d9;
 }
