--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,9 @@
         <li class="nav-item">
           <a href="#projects" class="sender nav-link">Projects</a>
         </li>
+        <li class="nav-item">
+          <a href="#contact" class="sender nav-link">Contact</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -52,17 +55,30 @@
   <div id="about-me">
     <div class="row pt-5 justify-content-center">
       <div class="col-12 text-center">
-        <h1>ABOUT</h1>
+        <h1>ABOUT ME</h1>
       </div>
     </div>
     <div class="underline"></div>
     <div class="row justify-content-center mt-5">
       <img src="imgs/penguin.jpg" class="d-none d-md-block col-3 profile-pic">
       <div class="col-9 text-center mb-5">
-        <h5>I'm <span class="name-emphasis">Christopher</span>, a Junior Computer Science major, Cyber Security minor at Texas A&M University College Station.
-        The dog loving, piano playing, tech fanatic from Corpus Christi, Texas. I enjoy tinkering with shiny new technologies and have recently found myself falling down the web-development rabbit hole.
-        You can often find me in my room either clacking at a keyboard or relaxing with some video games.</h5>
+        <h5>I'm <span class="name-emphasis">Christopher</span>, a dog loving, piano playing, tech fanatic from Corpus Christi, Texas.
+          Currently, I am a full time Senior Computer Science major, Cyber Security and Embedded Systems Integration minor at Texas A&M University College Station.
+          I'm not sure what I want to be 'when I grow up' yet, so my hobbies span from hardware and systems engineering, to software and web development and everything in between!
+        </br>Keep scrolling to see some of my skills and recent projects. Thanks for checking out my website!
+        </h5>
       </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <h2 class="pl-5 pt-3">EXPERIENCE</h2>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-3 col-sm-12 text-center p-3 experience">Co-Founder: Aggie Web Developers</div>
+      <div class="col-md-3 col-sm-12 text-center p-3 experience">Network Administration intern: WireStar Networks</div>
+      <div class="col-md-3 col-sm-12 text-center p-3 experience">Mentor, Judge: FTC Robotics Team 10726</div>
+      <!-- <div class="col-3 text-center p-3 experience">Words</div> -->
     </div>
     <div class="row">
       <div class="col-12">
@@ -71,25 +87,25 @@
     </div>
     <div class="flex">
       <div class="bar flex">
-        <div class="bar-fill" style="width:82%"><span>HTML</span></div>
+        <div class="bar-fill" style="width:82%"><span>HTML/CSS</span></div>
       </div>
       <div class="bar flex">
-        <div class="bar-fill" style="width:80%"><span>CSS</span></div>
+        <div class="bar-fill" style="width:90%"><span>C</span></div>
       </div>
       <div class="bar flex">
-        <div class="bar-fill" style="width:85%"><span>JAVASCRIPT</span></div>
+        <div class="bar-fill" style="width:92%"><span>C++</span></div>
       </div>
       <div class="bar flex">
-        <div class="bar-fill" style="width:90%"><span>C++</span></div>
+        <div class="bar-fill" style="width:87%"><span>JAVASCRIPT</span></div>
       </div>
       <div class="bar flex">
-        <div class="bar-fill" style="width:95%"><span>GIT</span></div>
+        <div class="bar-fill" style="width:85%"><span>SHELL SCRIPTING</span></div>
       </div>
       <div class="bar flex">
         <div class="bar-fill" style="width:97%"><span><span class="d-none d-md-inline">LINUX / MAC OS / WINDOWS</span> ENVIRONMENTS</span></div>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-12">
         <h2 class="pl-5 pt-3">HOBBIES & PASSIONS</h2>
       </div>
@@ -102,7 +118,7 @@
       <div class="col-3 text-center p-3"><i class="fas fa-server"></i><span class="d-none">Cyber Security</span></div>
       <div class="col-3 text-center p-3"><i class="fas fa-memory"></i><span class="d-none">Building Computers</span></div>
       <div class="col-3 text-center p-3"><i class="fas fa-laptop-code"></i><span class="d-none">Coding</span></div>
-    </div>
+    </div> -->
   </div>
 
   <div id="projects">
@@ -113,71 +129,146 @@
     </div>
     <div class="underline"></div>
     <div class="row justify-content-center">
-            <div class="card col-md-6 col-lg-4 p-4">
-                <div class="face face1 PWcover">
-                    <div class="content">
-                        <img src="imgs/website.png">
-                        <h3>mcgregorc.com</h3>
-                    </div>
-                </div>
-                <div class="face face2">
-                    <div class="content">
-                        <p>This site. <br>Mongo, Express, Node with Bootstrap styling</p>
-                            <a target="_blank" href="https://github.com/f4alt/Personal-Website">Github Repo</a>
-                    </div>
-                </div>
-            </div>
-            <!-- <div class="card col-md-6 col-lg-4 p-4">
-                <div class="face face1">
-                    <div class="content">
-                        <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
-                        <h3>Stuff</h3>
-                    </div>
-                </div>
-                <div class="face face2">
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                            <a href="#">Read More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card col-md-6 col-lg-4 p-4">
-                <div class="face face1">
-                    <div class="content">
-                        <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
-                        <h3>Here</h3>
-                    </div>
-                </div>
-                <div class="face face2">
-                    <div class="content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                            <a href="#">Read More</a>
-                    </div>
-                </div>
-            </div> -->
-        </div>
+      <div class="card col-md-6 col-lg-4">
+          <div class="face face1">
+              <div class="content">
+                  <img src="imgs/project-cards/marbleamerica.png">
+                  <h3>marbleamericaonline.com</h3>
+              </div>
+          </div>
+          <div class="face face2">
+              <div class="content">
+                  <p>Client website
+                  </br>HTML/CSS/JavaScript built on top of bigcommerce store
+                  </p>
+                  <a target="_blank" href="https://www.marbleamericaonline.com">Site</a>
+              </div>
+          </div>
+      </div>
+      <div class="card col-md-6 col-lg-4">
+          <div class="face face1">
+              <div class="content">
+                  <img src="imgs/project-cards/brlcad.png">
+                  <h3>BRLCAD</h3>
+              </div>
+          </div>
+          <div class="face face2">
+              <div class="content">
+                  <p>Updated 'art' tool in BRLCAD 3d modeling software to support Physically Based Rendering
+                  with appleseed engine
+                  </p>
+                  <a target="_blank" href="https://github.com/BRL-CAD/brlcad">Github</a>
+                  <a target="_blank" href="https://www.brlcad.org">BRLCAD</a>
+                  <a target="_blank" href="https://www.appleseedhq.net">appleseed</a>
+              </div>
+          </div>
+      </div>
+      <div class="card col-md-6 col-lg-4">
+          <div class="face face1">
+              <div class="content">
+                  <img src="imgs/project-cards/allstar.png">
+                  <h3>Ham Radio via VoIP</h3>
+              </div>
+          </div>
+          <div class="face face2">
+              <div class="content">
+                  <p>Built Allstar node on a Rasberry pi which allows ham radio
+                    operation to anyone in the world over the internet
+                  </p>
+                  <a target="_blank" href="https://allstarlink.org">Allstar</a>
+              </div>
+          </div>
+      </div>
+      <!-- <div class="card col-md-6 col-lg-4">
+          <div class="face face1">
+              <div class="content">
+                  <img src="imgs/website.png">
+                  <h3>mcgregorc.com</h3>
+              </div>
+          </div>
+          <div class="face face2">
+              <div class="content">
+                  <p>This site. <br>Mongo, Express, Node with Bootstrap styling
+                  </br>Hosted on my own server</p>
+                  <a target="_blank" href="https://github.com/f4alt/Personal-Website">Github Repo</a>
+              </div>
+          </div>
+      </div> -->
+      <div class="card col-md-6 col-lg-4">
+          <div class="face face1">
+              <div class="content">
+                  <img src="imgs/project-cards/website.png">
+                  <h3>mcgregorc.com</h3>
+              </div>
+          </div>
+          <div class="face face2">
+              <div class="content">
+                  <p>This site. <br>Mongo, Express, Node website with Bootstrap styling
+                  </br>Hosted on my own server</p>
+                  <a target="_blank" href="https://github.com/f4alt/Personal-Website">Github Repo</a>
+              </div>
+          </div>
+      </div>
+    </div>
   </div>
 
+  <div id="contact">
+    <div class="row pt-5 justify-content-center">
+      <div class="col-12 text-center">
+        <h1>GET IN TOUCH</h1>
+      </div>
+    </div>
+    <div class="underline"></div>
+  <div class="container mt-3 mb-5">
+  <form id="contact-form" method="post" action="/contact" role="form">
+    <label for="fname">Name</label>
+    <input type="text" id="fname" name="name" placeholder="Your name.." class="form-control" required="required"
+                                    data-error="Valid email is required.">
+
+    <label for="email">Email</label>
+    <!-- <input type="text" id="email" name="email" placeholder="Your email.."> -->
+
+    <input id="email" type="email" name="email" placeholder="Your email.." class="form-control" required="required"
+                                    data-error="Valid email is required.">
+
+    <label for="message">Question / Comment / Concern</label>
+    <textarea id="message" name="message" placeholder="Write something.." style="height:200px"></textarea>
+
+    <div class="g-recaptcha pb-2" data-sitekey="6LfYRQUeAAAAAMZbgPBxE9C9JnmTarjD9lqpxRIb"></div>
+
+    <div class="submit_block">
+      <input type="submit" value="Submit">
+
+      <ul id="submit_messages">
+        <li> <%= msg %> </li>
+      </ul>
+    </div>
+
+  </form>
+</div>
+</div>
+
   <div class="send-top text-center">
-    <a href="#welcome-msg" class="sender"><i class="fas fa-angle-double-up"></i></a>
+    <a href="#welcome-msg" class="sender" title="send top"><i class="fas fa-angle-up"></i></a>
   </div>
 
   <div class="footer mt-5 pt-5">
     <div class="footer-content text-center">
-      <a target="_blank" href="http://github.com/f4alt"><i class="fab fa-github"></i></a>
-      <a target="_blank" href="http://linkedin.com"><i class="fab fa-linkedin"></i></a>
-      <a target="_blank" href="Christopher_McGregor-Resume.pdf"><i class="far fa-sticky-note"></i></a>
+      <a alt="github" title="github" target="_blank" href="http://github.com/f4alt"><i class="fab fa-github"></i></a>
+      <a alt="linkedin" title="linkedin" target="_blank" href="http://linkedin.com"><i class="fab fa-linkedin"></i></a>
+      <a alt="resume" title="resume" target="_blank" href="Christopher_McGregor-Resume.pdf"><i class="far fa-sticky-note"></i></a>
     </div>
     <div class="footer-bottom">
       CHRISTOPHER MCGREGOR &copy;2020
     </div>
   </div>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS, then fontawesome, then local scripts -->
+    <!-- jQuery, Popper.js, Bootstrap JS, fontawesome, google recaptcha, then local scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/5afcb3563e.js" crossorigin="anonymous"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="scripts/index.js" type="text/javascript"></script>
     <script>
       navbarFill();
