--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,8 +63,8 @@
       <img src="imgs/penguin.jpg" class="d-none d-md-block col-3 profile-pic">
       <div class="col-9 text-center mb-5">
         <h5>I'm <span class="name-emphasis">Christopher</span>, a dog loving, piano playing, tech fanatic from Corpus Christi, Texas.
-          Currently, I am a full time Senior Computer Science major, Cyber Security and Embedded Systems Integration minor at Texas A&M University College Station.
-          I'm not sure what I want to be 'when I grow up' yet, so my hobbies span from hardware and systems engineering, to software and web development and everything in between!
+          Currently, I am a full time Senior Computer Science major, Cyber Security and Embedded Systems Integration minor at Texas A&M University College Station but
+          I'm still not sure what I want to be <em>when I grow up</em> yet. My hobbies span from hardware and systems engineering, to software and web development and .. everything in between!
         </br>Keep scrolling to see some of my skills and recent projects. Thanks for checking out my website!
         </h5>
       </div>
