CSCE445 route addition

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,10 @@
     </div>
     <div class="underline"></div>
     <div class="row justify-content-center mt-5">
-      <img src="imgs/penguin.jpg" class="d-none d-md-block col-3 profile-pic">
+      <div class="profile-pic col-3">
+        <img src="imgs/me.jpg">
+      </div>
+      <!-- <img src="imgs/penguin.jpg" class="d-none d-md-block col-3 profile-pic"> -->
       <div class="col-9 text-center mb-5">
         <h5>I'm <span class="name-emphasis">Christopher</span>, a dog loving, piano playing, tech fanatic from Corpus Christi, Texas.
           Currently, I am a full time Senior Computer Science major, Cyber Security and Embedded Systems Integration minor at Texas A&M University College Station but
