--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -169,8 +169,25 @@ html, body {
 
 /* ABOUT */
 .profile-pic {
-  transform: translate(-0, -15%);
+  width: 300px;
+  height: 250px;
+  overflow: hidden;
+  /* margin: 0 auto; */
   border-radius: 100px;
+}
+
+/* [2] Transition property for smooth transformation of images */
+.profile-pic img {
+  transform-origin: 54% 40%;
+  transition: transform .5s ease-in-out;
+  width: 100%;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.profile-pic:hover img {
+  transform: scale(5);
+  overflow: hidden;
+  /* transform: translate(-0, -15%); */
 }
 
 @media (max-width:375px) {
