--- a/views/CSCE445.ejs
+++ b/views/CSCE445.ejs
@@ -60,11 +60,11 @@
           <div class="bar-fill" style="width:87%"><span>Social(Phone Apps) - Call, text, email, Instagram, Snapchat</span></div>
         </div>
         <div class="bar flex">
-          <div class="bar-fill" style="width:85%"><span>Reading(books) - NonFiction, Fantasy</span></div>
+          <div class="bar-fill" style="width:85%"><span>Reading(Books) - NonFiction, Fantasy</span></div>
         </div>
-        <div class="bar flex">
+        <!-- <div class="bar flex">
           <div class="bar-fill" style="width:91%"><span>?</span></div>
-        </div>
+        </div> -->
         <!-- <div class="bar flex">
           <div class="bar-fill" style="width:97%"><span><span class="d-none d-md-inline">LINUX / MAC OS / WINDOWS</span> ENVIRONMENTS</span></div>
         </div> -->
