--- a/views/CSCE445/CSCE445.ejs
+++ b/views/CSCE445/CSCE445.ejs
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-3 col-sm-12 text-center p-3 experience"><a href="#">Coming Soon</a></div>
+        <div class="col-md-3 col-sm-12 text-center p-3 experience"><a href="/CSCE445_1">A2 - linking commonalities</a></div>
         <div class="col-md-3 col-sm-12 text-center p-3 experience"><a href="#">Coming Soon</a></div>
         <div class="col-md-3 col-sm-12 text-center p-3 experience"><a href="#">Coming Soon</a></div>
         <!-- <div class="col-3 text-center p-3 experience">Words</div> -->
