--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: #f2f7ff;
+  overflow: hidden;
 }
 
 a {
@@ -117,6 +118,7 @@ a {
 }
 
 .card{
+  min-width: 75%;
   background: transparent;
   border: none;
   position: relative;
@@ -187,7 +189,7 @@ a {
 
 .card .face.face2 .content p{
     margin-left: 2%;
-    padding: 0;
+    padding: 2%;
     color: white;
 }
 
@@ -197,7 +199,7 @@ a {
     text-decoration: none;
     font-weight: 900;
     color: white;
-    padding: 0;
+    padding: 2%;
     border: 1px solid white;
     border-radius: 15px;
 }
@@ -209,6 +211,7 @@ a {
 
 .fill-screen {
   height: 92vh;
+  padding-bottom: 20px;
 }
 
 .react-terminal-wrapper {
@@ -252,4 +255,36 @@ a {
 		transform: scale(0.95);
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
+}
+
+.menu {
+  display: block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #3B78FF;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+/* Rotate first bar */
+.change .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+/* Fade out the second bar */
+.change .bar2 {opacity: 0;}
+
+/* Rotate last bar */
+.change .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
+}
+
+.sm-screen {
+  padding-right: 45px;
+  width: 100vw;
+  height: 92vh;
 }
