--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: #f2f7ff;
-  overflow: hidden;
+  overflow-x: hidden;
+}
+
+@media screen and (min-width: 640px) {
+  html,
+  body {
+    overflow-y: hidden;
+  }
 }
 
 a {
