--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,7 +125,7 @@ a {
 }
 
 .card{
-  min-width: 75%;
+  min-width: 60%;
   background: transparent;
   border: none;
   position: relative;
@@ -146,7 +146,7 @@ a {
     justify-content: center;
     align-items: center;
     z-index: 1;
-    transform: translateY(100px);
+    transform: translateY(40%);
     background: #252a33;
 }
 
